package com.example.firstapp.data.parksTable;

public interface ParkQuery
{

}
